revamp of code
